crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es5.2.minified/output.js
var A1, M21;
!function(A) {
    var B, B1, C;
    B1 = B || (B = {
    }), C = function() {
        "use strict";
        !function(instance, Constructor) {
            if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
        }(this, C);
    }, B1.C = C, A.B = B;
}(A1 || (A1 = {
})), (function(M2) {
    var X, Point;
    (X || (X = {
    })).Point = Point, M2.X = X;
})(M21 || (M21 = {
}));
